--- a/pages/about.html
+++ b/pages/about.html
@@ -11,18 +11,18 @@
     <div class="container">
         <div class="center">
             <img src="img/logo.png" alt="logo" width="180" class="logo">
-            <p><strong>Version: </strong> <span id="version"></span></p>
-            <p><strong>GitHub: </strong> <a href="https://github.com/Ademking/BetterViewer"
-                    target="_blank">https://github.com/Ademking/BetterViewer</a></p>
+			<p><strong>You are using BetterViewer for the Jadua Go Browser</strong></p>
+            <p><strong>GitHub: </strong> <a href="https://github.com/JaduaStudios/GoViewer"
+                    target="_blank">https://github.com/JaduaStudios/GoViewer</a></p>
             <p>
-                <strong>ProductHunt: </strong><a href="https://producthunt.com/posts/betterviewer" target="_blank">https://producthunt.com/posts/betterviewer</a>
+                <strong>Original Source: </strong><a href="https://github.com/Ademking/BetterViewer" target="_blank">https://github.com/Ademking/BetterViewer</a>
             </p>
             
             
         </div>
         <br>
         <div class="center inner-container" >
-            <p>BetterViewer makes image viewing faster, easier, and more fun.</p>
+            <p>BetterViewer for the Jadua Go Browser makes image viewing faster, easier, and more fun.</p>
             <p>BetterViewer was designed as a replacement for the image viewing mode built into Chrome-based web browsers. 
                 <br> With BetterViewer you can use various keyboard shortcuts to quickly pan, zoom images, edit and a lot more!
             </p>
